@@ -12,4 +12,4 @@
 ^pm_to_blib$
 ^.#
 ^#
-^check_tcptraffic-
+^check_traffic-
