@@ -2,16 +2,16 @@
 
 =head1 NAME
 
-C<check_tcptraffic> - A Nagios plugin to monitor the amount of TCP traffic
+C<check_traffic> - A Nagios plugin to monitor the amount of network traffic
 
 
 =head1 DESCRIPTION
 
-check_tcptraffic is a nagios Nagios plugin to monitor the amount of TCP traffic
+check_traffic is a nagios Nagios plugin to monitor the amount of network traffic
 
-check_tcptraffic uses the /proc/net/dev Linux entry to compute the
+check_traffic uses the /proc/net/dev Linux entry to compute the
 amount of transferred bytes from the last plugin execution (temporary
-data is stored in the /tmp/check_tcptraffic-iface file)
+data is stored in the /tmp/check_traffic-iface file)
 
 =head2 32 bit kernels
 
@@ -31,7 +31,7 @@ Version 2.2.7
 
 =head1 SYNOPSIS
 
- check_tcptraffic --critical=crit --warning=warn --interface=iface --speed=speed
+ check_traffic --critical=crit --warning=warn --interface=iface --speed=speed
                   [--verbose] [--reset] [--help]
 
  Required arguments
@@ -77,9 +77,9 @@ Version 2.2.7
 
 =head1 EXAMPLE
 
-check_tcptraffic --warning=20971520 --critical=83886080 --interface=eth0
+check_traffic --warning=20971520 --critical=83886080 --interface=eth0
 
-check_tcptraffic checks that the number of transferred bytes on eth0 will
+check_traffic checks that the number of transferred bytes on eth0 will
 stay below the specified limits
 
 =head1 DIAGNOSTICS
@@ -95,7 +95,7 @@ in case of an unknown problem
 
 =head1 DEPENDENCIES
 
-check_tcptraffic depends on
+check_traffic depends on
 
 =over 4
 
