@@ -1,3 +1,7 @@
+2022-05-11  Matteo Corti  <matteo@corti.li>
+
+        * check_traffic: plugin renamed (it's not only TCP but also UDP)
+
 2017-10-10  Matteo Corti  <matteo@corti.li>
 
 	* Makefile.PL: Perl 5.26 support ('.' missing from @INC)
